@@ -1,6 +1,6 @@
 Title: RRDtool
-Date: 2000-01-10
-Owner: Tobias Oetiker <oetiker@ee.ethz.ch>
+Date: 2005-04-04
+Owner: Tobias Oetiker <tobi@oetiker.ch>
 Group: Software
 
 Round Robin Database Tool
