@@ -6,9 +6,6 @@ Interested:
 Tobias Oetiker <oetiker@ee.ethz.ch>
 Jake Brutlag <jakeb@microsoft.com>  
 - updating rrd_update to use accessor fks
-Karl Schilke <karl_schilke@eli.net> 
-- changeing data access to mmap
-
 
 Plan:
 
